syntax = "proto3";
package neoshowcase.protobuf;
option go_package = "github.com/traPtitech/neoshowcase/pkg/infrastructure/grpc/pb";

import "google/protobuf/empty.proto";
import "neoshowcase/protobuf/gateway.proto";

message AuthAvailableRequest {
  string fqdn = 1;
}

message AuthAvailableResponse {
  bool available = 1;
}

message StartBuildRequest {
  string application_id = 1;
  string build_id = 2;
  string repository_id = 3;
  string commit = 4;
  string image_name = 5; // empty on static site build
  string image_tag = 6; // empty on static site build
  ApplicationConfig config = 7;
}

message BuilderRequest {
  enum Type {
    START_BUILD = 0;
    CANCEL_BUILD = 1;
  }
  Type type = 1;
  oneof body {
    StartBuildRequest start_build = 2;
    BuildIdRequest cancel_build = 3;
  }
}

message BuildStarted {
  string application_id = 1;
  string build_id = 2;
}

message BuildSettled {
  enum Reason {
    SUCCESS = 0;
    FAILED = 1;
    CANCELLED = 2;
  }
  string application_id = 1;
  string build_id = 2;
  Reason reason = 3;
}

message BuildLogPortion {
  string build_id = 1;
  bytes log = 2;
}

message BuilderResponse {
  enum Type {
    CONNECTED = 0;
    BUILD_STARTED = 1;
    BUILD_SETTLED = 2;
    BUILD_LOG = 3;
  }
  Type type = 1;
  oneof body {
    BuildStarted started = 2;
    BuildSettled settled = 3;
    BuildLogPortion log = 4;
  }
}

message SSGenRequest {
  enum Type {
    RELOAD = 0;
  }
  Type type = 1;
}

service ControllerService {
  rpc AuthAvailable(AuthAvailableRequest) returns (AuthAvailableResponse);
  rpc FetchRepository(RepositoryIdRequest) returns (google.protobuf.Empty);
  rpc RegisterBuilds(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc SyncDeployments(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc StreamBuildLog(BuildIdRequest) returns (stream BuildLog);
  rpc CancelBuild(BuildIdRequest) returns (google.protobuf.Empty);
}

service ControllerBuilderService {
  rpc ConnectBuilder(stream BuilderResponse) returns (stream BuilderRequest);
}

service ControllerSSGenService {
  rpc ConnectSSGen(google.protobuf.Empty) returns (stream SSGenRequest);
}
